Salesforce CPQ/main/default/objects/ProductAttributeSet__c/fields/AttributeSet__c.field-meta.xml
<CustomField>
    <fullName>AttributeSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Sets</label>
    <referenceTo>AttributeSet__c</referenceTo>
    <relationshipName>Attribute_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>