Salesforce CPQ/main/default/objects/ProductAttributeSet__c/fields/ConfiguredSKU__c.field-meta.xml
<CustomField>
    <fullName>ConfiguredSKU__c</fullName>
    <formula>CASESAFEID(ProductOption__r.ConfiguredSKU__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configured SKU</label>
    <type>Text</type>
</CustomField>