Salesforce CPQ/main/default/objects/ProductAttributeSet__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>ProductOption__r.ConfiguredSKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product Name</label>
    <type>Text</type>
</CustomField>