Salesforce CPQ/main/default/objects/ProductAttributeSet__c/fields/ProductOption__c.field-meta.xml
<CustomField>
    <fullName>ProductOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>ProductOption__c</referenceTo>
    <relationshipName>Product_Option</relationshipName>
    <type>Lookup</type>
</CustomField>