Salesforce CPQ/main/default/objects/ProductAttributeSet__c/fields/ProductOptionName__c.field-meta.xml
<CustomField>
    <fullName>ProductOptionName__c</fullName>
    <formula>ProductOption__r.OptionalSKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Option Name</label>
    <type>Text</type>
</CustomField>